// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Simple/AppBar full app bar 1`] = `
<AppBar store={{}} archivedCount={0} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <header className={"app-bar-header"}>
    <div className={"app-flex-1"}>
      <Brand>
        <a className={"app-bar-logo"}>
          <img className={"app-bar-logo-img"} src={"favicon.png"} />
          <h4 className={"app-bar-logo-name"}>
             things 
          </h4>
        </a>
      </Brand>
    </div>
    <div className={"app-flex-2"}>
      <Connect(Search) />
    </div>
    <div className={"app-flex-3"}>
      <Connect(SortDropdown) />
      <FontAwesomeIcon size={"2x"} className={"app-bar-archive-icon"} icon={{"prefix":"fas","iconName":"archive","icon":[512,512,[],"f187","M32 448c0 17.7 14.3 32 32 32h384c17.7 0 32-14.3 32-32V160H32v288zm160-212c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v8c0 6.6-5.4 12-12 12H204c-6.6 0-12-5.4-12-12v-8zM480 32H32C14.3 32 0 46.3 0 64v48c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16V64c0-17.7-14.3-32-32-32z"]}} border={false} mask={null} fixedWidth={false} inverse={false} flip={null} listItem={false} pull={null} pulse={false} rotation={null} spin={false} symbol={false} title={""} transform={null}>
        <svg aria-hidden={"true"} focusable={"false"} data-prefix={"fas"} data-icon={"archive"} className={"svg-inline--fa fa-archive fa-w-16 fa-2x app-bar-archive-icon"} role={"img"} xmlns={"http://www.w3.org/2000/svg"} viewBox={"0 0 512 512"} style={{}}>
          <path fill={"currentColor"} d={"M32 448c0 17.7 14.3 32 32 32h384c17.7 0 32-14.3 32-32V160H32v288zm160-212c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v8c0 6.6-5.4 12-12 12H204c-6.6 0-12-5.4-12-12v-8zM480 32H32C14.3 32 0 46.3 0 64v48c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16V64c0-17.7-14.3-32-32-32z"} style={{}} />
        </svg>
      </FontAwesomeIcon>
      <Badge className={"app-bar-archive-badge"} pill={true} theme={"primary"} outline={false} tag={"span"}>
        <span className={"app-bar-archive-badge badge badge-primary badge-pill"} />
      </Badge>
    </div>
  </header>
</AppBar>
`;

exports[`Storyshots Simple/AppBar with test items (1 archived) 1`] = `
<AppBar store={{}} archivedCount={3} dispatch={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <header className={"app-bar-header"}>
    <div className={"app-flex-1"}>
      <Brand>
        <a className={"app-bar-logo"}>
          <img className={"app-bar-logo-img"} src={"favicon.png"} />
          <h4 className={"app-bar-logo-name"}>
             things 
          </h4>
        </a>
      </Brand>
    </div>
    <div className={"app-flex-2"}>
      <Connect(Search) />
    </div>
    <div className={"app-flex-3"}>
      <Connect(SortDropdown) />
      <FontAwesomeIcon size={"2x"} className={"app-bar-archive-icon"} icon={{"prefix":"fas","iconName":"archive","icon":[512,512,[],"f187","M32 448c0 17.7 14.3 32 32 32h384c17.7 0 32-14.3 32-32V160H32v288zm160-212c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v8c0 6.6-5.4 12-12 12H204c-6.6 0-12-5.4-12-12v-8zM480 32H32C14.3 32 0 46.3 0 64v48c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16V64c0-17.7-14.3-32-32-32z"]}} border={false} mask={null} fixedWidth={false} inverse={false} flip={null} listItem={false} pull={null} pulse={false} rotation={null} spin={false} symbol={false} title={""} transform={null}>
        <svg aria-hidden={"true"} focusable={"false"} data-prefix={"fas"} data-icon={"archive"} className={"svg-inline--fa fa-archive fa-w-16 fa-2x app-bar-archive-icon"} role={"img"} xmlns={"http://www.w3.org/2000/svg"} viewBox={"0 0 512 512"} style={{}}>
          <path fill={"currentColor"} d={"M32 448c0 17.7 14.3 32 32 32h384c17.7 0 32-14.3 32-32V160H32v288zm160-212c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v8c0 6.6-5.4 12-12 12H204c-6.6 0-12-5.4-12-12v-8zM480 32H32C14.3 32 0 46.3 0 64v48c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16V64c0-17.7-14.3-32-32-32z"} style={{}} />
        </svg>
      </FontAwesomeIcon>
      <Badge className={"app-bar-archive-badge"} pill={true} theme={"primary"} outline={false} tag={"span"}>
        <span className={"app-bar-archive-badge badge badge-primary badge-pill"}>
          3
        </span>
      </Badge>
    </div>
  </header>
</AppBar>
`;
